# backtesting

./: .env_demo  .gitignore  backtest_log_streamlit.py  backtest_utils.py  lit_multi_factor.bat  lit_positions.bat  lit_single_factor.bat  multi_factor_analysis.py  pyproject.toml  single_factor_analysis.py  stock_analysis_stream.py  stock_filters.py
docs/: multi_factor_analysis_guide.md  multi_strategy_batch_guide.md  qmt_cancel_orders_guide.md  qmt_order_txt_guide.md  single_factor_analysis_README.md
qmt/: cancel_orders.py  place_orders_from_file.py  positions_cli.py  qmt_streamlit.py  stock_metrics_cli.py
src/: backtest_log_streamlit.py  multi_factor_analysis.py  multi_factor_calculator.py  order_utils.py  single_factor_analysis.py  stock_analysis_stream.py  stock_filters.py  strategy_config_io.py
tests/: test_order_utils.py
